k8s/knative/net-contour.yml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: contour-ingress-controller
  namespace: knative-serving
  labels:
    networking.knative.dev/ingress-provider: contour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contour-ingress-controller
  template:
    metadata:
      labels:
        app: contour-ingress-controller
    spec:
      serviceAccountName: controller
      containers:
      - name: controller
        # This is the Go import path for the binary that is containerized
        # and substituted here.
        image: gcr.io/knative-releases/knative.dev/net-contour/cmd/controller@sha256:6b909a9d0ad093e4dbf934c908f8ec273d8a5a79d14912465b69f78b3a4468ce
        resources:
          requests:
            cpu: 40m
            memory: 40Mi
          limits:
            cpu: 400m
            memory: 400Mi
        ports:
        - name: metrics
          containerPort: 9090
        - name: profiling
          containerPort: 8008
        securityContext:
          allowPrivilegeEscalation: false

---
