k8s/knative/serving-nscert.yml
# Copyright 2019 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: networking-ns-cert
  namespace: knative-serving
  labels:
    serving.knative.dev/release: "v0.16.0"
    networking.knative.dev/wildcard-certificate-provider: nscert
spec:
  selector:
    matchLabels:
      app: networking-ns-cert
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: networking-ns-cert
        serving.knative.dev/release: "v0.16.0"
    spec:
      serviceAccountName: controller
      containers:
      - name: networking-nscert
        # This is the Go import path for the binary that is containerized
        # and substituted here.
        image: gcr.io/knative-releases/knative.dev/serving/cmd/networking/nscert@sha256:3e46d8a9bfcf76bcfd97711bcb63e7af4f44cb72c19d3e0ae4789957776e1032
        resources:
          requests:
            cpu: 30m
            memory: 40Mi
          limits:
            cpu: 300m
            memory: 400Mi
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - name: metrics
          containerPort: 9090
        - name: profiling
          containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: networking-ns-cert
    serving.knative.dev/release: "v0.16.0"
    networking.knative.dev/wildcard-certificate-provider: nscert
  name: networking-ns-cert
  namespace: knative-serving
spec:
  ports:
  - # Define metrics and profiling for them to be accessible within service meshes.
    name: http-metrics
    port: 9090
    targetPort: 9090
  - name: http-profiling
    port: 8008
    targetPort: 8008
  selector:
    app: networking-ns-cert

---
